--- a/.github/workflows/Build-X86.yml
+++ b/.github/workflows/Build-X86.yml
@@ -138,6 +138,7 @@ jobs:
     - name: 更新、安装feeds
       run: |
         cd $OPENWRT_PATH
+        sed -i '/^#src-git luci https:\/\/github.com\/coolsnowwolf\/luci$/s/^#//' feeds.conf.default && sed -i '/^src-git luci https:\/\/github.com\/coolsnowwolf\/luci\.git;openwrt-23\.05$/s/^/#/' feeds.conf.default
         ./scripts/feeds update -a
         ./scripts/feeds install -a
 
