--- a/config/x86-mini.config
+++ b/config/x86-mini.config
@@ -4984,7 +4984,7 @@ CONFIG_PACKAGE_luci-app-autoreboot=y
 # CONFIG_PACKAGE_luci-app-filebrowser is not set
 CONFIG_PACKAGE_luci-app-filetransfer=y
 CONFIG_PACKAGE_luci-app-firewall=y
-# CONFIG_PACKAGE_luci-app-frpc is not set
+CONFIG_PACKAGE_luci-app-frpc=y
 # CONFIG_PACKAGE_luci-app-frps is not set
 # CONFIG_PACKAGE_luci-app-fwknopd is not set
 # CONFIG_PACKAGE_luci-app-haproxy-tcp is not set
@@ -5140,7 +5140,7 @@ CONFIG_PACKAGE_luci-app-upnp=y
 # CONFIG_PACKAGE_luci-app-webrestriction is not set
 # CONFIG_PACKAGE_luci-app-wifischedule is not set
 CONFIG_PACKAGE_luci-app-wol=y
-CONFIG_PACKAGE_luci-app-xfrpc=y
+# CONFIG_PACKAGE_luci-app-xfrpc is not set
 # CONFIG_PACKAGE_luci-app-xinetd is not set
 # CONFIG_PACKAGE_luci-app-xlnetacc is not set
 # CONFIG_PACKAGE_luci-app-xupnpd is not set
@@ -5283,6 +5283,39 @@ CONFIG_PACKAGE_luci-i18n-filetransfer-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-firewall-vi is not set
 CONFIG_PACKAGE_luci-i18n-firewall-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-firewall-zh-tw is not set
+# CONFIG_PACKAGE_luci-i18n-frpc-ar is not set
+# CONFIG_PACKAGE_luci-i18n-frpc-bg is not set
+# CONFIG_PACKAGE_luci-i18n-frpc-bn is not set
+# CONFIG_PACKAGE_luci-i18n-frpc-ca is not set
+# CONFIG_PACKAGE_luci-i18n-frpc-cs is not set
+# CONFIG_PACKAGE_luci-i18n-frpc-da is not set
+# CONFIG_PACKAGE_luci-i18n-frpc-de is not set
+# CONFIG_PACKAGE_luci-i18n-frpc-el is not set
+# CONFIG_PACKAGE_luci-i18n-frpc-es is not set
+# CONFIG_PACKAGE_luci-i18n-frpc-fi is not set
+# CONFIG_PACKAGE_luci-i18n-frpc-fr is not set
+# CONFIG_PACKAGE_luci-i18n-frpc-he is not set
+# CONFIG_PACKAGE_luci-i18n-frpc-hi is not set
+# CONFIG_PACKAGE_luci-i18n-frpc-hu is not set
+# CONFIG_PACKAGE_luci-i18n-frpc-it is not set
+# CONFIG_PACKAGE_luci-i18n-frpc-ja is not set
+# CONFIG_PACKAGE_luci-i18n-frpc-ko is not set
+# CONFIG_PACKAGE_luci-i18n-frpc-lt is not set
+# CONFIG_PACKAGE_luci-i18n-frpc-mr is not set
+# CONFIG_PACKAGE_luci-i18n-frpc-ms is not set
+# CONFIG_PACKAGE_luci-i18n-frpc-no is not set
+# CONFIG_PACKAGE_luci-i18n-frpc-pl is not set
+# CONFIG_PACKAGE_luci-i18n-frpc-pt is not set
+# CONFIG_PACKAGE_luci-i18n-frpc-pt-br is not set
+# CONFIG_PACKAGE_luci-i18n-frpc-ro is not set
+# CONFIG_PACKAGE_luci-i18n-frpc-ru is not set
+# CONFIG_PACKAGE_luci-i18n-frpc-sk is not set
+# CONFIG_PACKAGE_luci-i18n-frpc-sv is not set
+# CONFIG_PACKAGE_luci-i18n-frpc-tr is not set
+# CONFIG_PACKAGE_luci-i18n-frpc-uk is not set
+# CONFIG_PACKAGE_luci-i18n-frpc-vi is not set
+CONFIG_PACKAGE_luci-i18n-frpc-zh-cn=y
+# CONFIG_PACKAGE_luci-i18n-frpc-zh-tw is not set
 CONFIG_PACKAGE_luci-i18n-netdata-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-nlbwmon-ar is not set
 # CONFIG_PACKAGE_luci-i18n-nlbwmon-bg is not set
@@ -5453,7 +5486,6 @@ CONFIG_PACKAGE_luci-i18n-upnp-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-wol-vi is not set
 CONFIG_PACKAGE_luci-i18n-wol-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-wol-zh-tw is not set
-# CONFIG_PACKAGE_luci-i18n-xfrpc-lt is not set
 # end of LuCI
 
 #
@@ -6242,7 +6274,7 @@ CONFIG_PACKAGE_cgi-io=y
 # CONFIG_PACKAGE_e2guardian is not set
 # CONFIG_PACKAGE_etebase is not set
 # CONFIG_PACKAGE_freshclam is not set
-# CONFIG_PACKAGE_frpc is not set
+CONFIG_PACKAGE_frpc=y
 # CONFIG_PACKAGE_frps is not set
 # CONFIG_PACKAGE_gateway-go is not set
 CONFIG_PACKAGE_haproxy=y
